--- a/admin/package.json
+++ b/admin/package.json
@@ -1,38 +1,42 @@
 {
-  "name": "admin",
-  "version": "0.1.0",
+  "name": "vuetify-material-dashboard",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "dev": "npm run serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^2.6.5",
-    "lodash": "^4.17.15",
-    "node-sass": "^4.12.0",
-    "vue": "^2.6.10",
+    "chartist": "0.11.0",
+    "jwt-decode": "^2.2.0",
+    "moment": "^2.24.0",
+    "node-sass": "^4.9.3",
+    "sass-loader": "^7.1.0",
+    "vee-validate": "^2.2.14",
+    "vue": "^2.5.17",
+    "vue-chartist": "^2.1.2",
+    "vue-google-login": "^2.0.2",
     "vue-loading-overlay": "^3.2.0",
-    "vue-router": "^3.0.3",
-    "vuetify": "^2.0.0",
-    "vuex": "^3.0.1",
-    "vuex-router-sync": "^5.0.0"
+    "vue-meta": "^1.5.2",
+    "vuetify": "^1.2.9"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.10.0",
-    "@vue/cli-service": "^3.10.0",
-    "sass": "^1.17.4",
-    "sass-loader": "^7.1.0",
-    "vue-cli-plugin-vuetify": "^0.6.3",
-    "vue-template-compiler": "^2.6.10",
-    "vuetify-loader": "^1.2.2"
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions"
-  ]
+    "@mdi/font": "^2.5.94",
+    "@vue/cli-plugin-babel": "^3.0.1",
+    "@vue/cli-plugin-eslint": "^3.0.1",
+    "@vue/cli-service": "^3.0.1",
+    "@vue/eslint-config-standard": "^3.0.1",
+    "axios": "^0.19.0",
+    "material-design-icons-iconfont": "^3.0.3",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
+    "vue-analytics": "^5.8.0",
+    "vue-i18n": "^7.4.0",
+    "vue-router": "^3.0.1",
+    "vue-template-compiler": "^2.5.17",
+    "vuex": "^3.0.1",
+    "vuex-router-sync": "^5.0.0"
+  }
 }
