--- a/admin/package.json
+++ b/admin/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.24.0",
     "node-sass": "^4.9.3",
     "sass-loader": "^7.1.0",
+    "sortablejs": "^1.10.1",
     "vee-validate": "^2.2.14",
     "vue": "^2.5.17",
     "vue-chartist": "^2.1.2",
