--- a/admin/package.json
+++ b/admin/package.json
@@ -30,6 +30,8 @@
     "@vue/cli-service": "^3.0.1",
     "@vue/eslint-config-standard": "^3.0.1",
     "axios": "^0.19.0",
+    "clone-regexp": "^2.2.0",
+    "diacritics": "^1.3.0",
     "material-design-icons-iconfont": "^3.0.3",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
