--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "@vue/cli-service": "^4.1.0",
     "clone-regexp": "^2.2.0",
     "diacritics": "^1.3.0",
+    "lodash": "^4.17.15",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-vuetify": "^2.0.2",
