--- a/web/package.json
+++ b/web/package.json
@@ -7,12 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@chenfengyuan/vue-qrcode": "^1.0.2",
     "axios": "^0.19.0",
     "core-js": "^3.4.3",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "vee-validate": "2.2.14",
-    "vue": "^2.6.10",
+    "vue": "^2.6.11",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.0",
     "vuex": "^3.1.2",
