--- a/admin/package.json
+++ b/admin/package.json
@@ -15,6 +15,7 @@
     "node-sass": "^4.9.3",
     "sass-loader": "^7.1.0",
     "sortablejs": "^1.10.1",
+    "tiptap-vuetify": "^1.0.0",
     "valid-url": "^1.0.9",
     "vee-validate": "^2.2.14",
     "vue": "^2.5.17",
