--- a/web/package.json
+++ b/web/package.json
@@ -12,8 +12,10 @@
     "core-js": "^3.4.3",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
+    "sanitize-html": "^1.23.0",
     "vee-validate": "2.2.14",
     "vue": "^2.6.11",
+    "vue-recaptcha": "^1.3.0",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.0",
     "vuex": "^3.1.2",
