--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.6.11",
     "vue-recaptcha": "^1.3.0",
     "vue-router": "^3.1.3",
+    "vue-scroll-loader": "^2.2.0",
     "vuetify": "^2.1.0",
     "vuex": "^3.1.2",
     "vuex-router-sync": "^5.0.0"
