--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@chenfengyuan/vue-qrcode": "^1.0.2",
+    "@microsoft/signalr": "^3.1.4",
     "axios": "^0.19.0",
     "core-js": "^3.4.3",
     "jwt-decode": "^2.2.0",
