--- a/web/package.json
+++ b/web/package.json
@@ -31,6 +31,7 @@
     "clone-regexp": "^2.2.0",
     "diacritics": "^1.3.0",
     "lodash": "^4.17.15",
+    "query-string": "^6.12.1",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-vuetify": "^2.0.2",
