--- a/admin/package.json
+++ b/admin/package.json
@@ -15,7 +15,8 @@
     "node-sass": "^4.9.3",
     "sass-loader": "^7.1.0",
     "sortablejs": "^1.10.1",
-    "tiptap-vuetify": "^1.0.0",
+    "tiptap": "^1.27.1",
+    "tiptap-extensions": "^1.29.1",
     "valid-url": "^1.0.9",
     "vee-validate": "^2.2.14",
     "vue": "^2.5.17",
@@ -23,7 +24,6 @@
     "vue-google-login": "^2.0.2",
     "vue-loading-overlay": "^3.2.0",
     "vue-meta": "^1.5.2",
-    "vue2-editor": "^2.10.2",
     "vuetify": "^1.2.9"
   },
   "devDependencies": {
