--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "sanitize-html": "^1.23.0",
+    "scroll-into-view": "^1.14.2",
     "vee-validate": "2.2.14",
     "vue": "^2.6.11",
     "vue-recaptcha": "^1.3.0",
