--- a/admin-3.0/package.json
+++ b/admin-3.0/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --port 8088",
+    "serve-prod": "vue-cli-service serve --port 8088 mode production",
     "build": "vue-cli-service build"
   },
   "dependencies": {
